kitten/reported_bugs/rust/rust-83531-2/stderr.txt
error[E0412]: cannot find type `T` in this scope

 --> mutant.rs:4:10

  |

2 | union Foo {

  |          - help: you might be missing a type parameter: `<T>`

3 | a : isize ,

4 | b : & 'b T ,

  |          ^ not found in this scope



error[E0261]: use of undeclared lifetime name `'b`

 --> mutant.rs:4:7

  |

2 | union Foo {

  |          - help: consider introducing lifetime `'b` here: `<'b>`

3 | a : isize ,

4 | b : & 'b T ,

  |       ^^ undeclared lifetime

  |

  = help: if you want to experiment with in-band lifetime bindings, add `#![feature(in_band_lifetimes)]` to the crate attributes



error[E0658]: unions with non-`Copy` fields other than `ManuallyDrop<T>` are unstable

 --> mutant.rs:4:1

  |

4 | b : & 'b T ,

  | ^^^^^^^^^^

  |

  = note: see issue #55149 <https://github.com/rust-lang/rust/issues/55149> for more information

  = help: add `#![feature(untagged_unions)]` to the crate attributes to enable



error: internal compiler error: compiler/rustc_mir/src/interpret/eval_context.rs:199:17: The type checker should prevent reading from a never-written local



thread 'rustc' panicked at 'Box<dyn Any>', compiler/rustc_errors/src/lib.rs:1007:9

note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace



note: the compiler unexpectedly panicked. this is a bug.



note: we would appreciate a bug report: https://github.com/rust-lang/rust/issues/new?labels=C-bug%2C+I-ICE%2C+T-compiler&template=ice.md



note: rustc 1.54.0-nightly (ed597e7e1 2021-06-08) running on x86_64-unknown-linux-gnu



note: compiler flags: -Z mir-opt-level=3 -Z new-llvm-pass-manager=yes -Z unsound-mir-opts=yes -Z polonius=yes -Z polymorphize=yes -C debuginfo=2 -C opt-level=3 --crate-type staticlib



query stack during panic:

#0 [eval_to_allocation_raw] const-evaluating + checking `Bar::Boo::{constant#0}`

#1 [eval_to_const_value_raw] simplifying constant for the type system `Bar::Boo::{constant#0}`

end of query stack

error: aborting due to 4 previous errors



Some errors have detailed explanations: E0261, E0412, E0658.

For more information about an error, try `rustc --explain E0261`.

